Always compute MW load flow